--- a/Lesson05AndroidWeather/app/src/main/AndroidManifest.xml
+++ b/Lesson05AndroidWeather/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         </activity>
 
         <activity android:name=".WeatherInfoActivity"></activity>
+        <activity android:name=".CitiesActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+
+
     </application>
 
 </manifest>
