--- a/MyWeather-v2/app/src/main/AndroidManifest.xml
+++ b/MyWeather-v2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.myweather_v2">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -18,11 +21,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> <!-- Тема Base.Theme.AppCompat.Dialog - чтобы эта activity открывалась поверх -->
+        <activity
+            android:name=".CitiesActivity"
+            android:theme="@style/Base.Theme.AppCompat.Dialog"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".OptionsActivity" />
 
-        <activity android:name=".CitiesActivity"></activity>
-        <activity android:name=".SettingsActivity"></activity>
-        <activity android:name=".OptionsActivity"></activity>
+        <service android:name=".WeatherInfoService"></service>
     </application>
 
 </manifest>
